---------------------------------------------------------------------------------------------------
Version: 20.0.2
Date: 2020-12-05
  Features:
  Changes:
  Bugfixes:
  Info:
    - Version numbers back on track, previous versio released as 1.1.0 by mistake.
---------------------------------------------------------------------------------------------------
Version: 20.0.1
Date: 2020-11-27
  Features:
    - Update for Factorio 1.1 release.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.0
Date: 2020-02-25
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: