@@ -1,16 +1,18 @@
 [mod-setting-name]
 rocket_target-starting_goal=Starting goal value
-rocket_target-goal_type=Goal type
+rocket_target-goal_type=Item Tracked
 rocket_target-goal_title=Show goal title text
 rocket_target-winning_title=Victory GUI title
 rocket_target-winning_message=Victory GUI message
+rocket_target-starting_completed_count=Starting completed count
 
 [mod-setting-description]
 rocket_target-starting_goal=The value of the goal before anything is added via command.
-rocket_target-goal_type=The action to complete the goal.
+rocket_target-goal_type=The item to track and the optional goal is for.
 rocket_target-goal_title=If the goal is written in text at the top of the small GUI.
 rocket_target-winning_title=The title of the GUI shown when goal is reached.
 rocket_target-winning_message=The message in the GUI shown when the goal is reached.
+rocket_target-starting_completed_count=The number of the goal item type already launched. Useful if adding the mod to an existing map.
 
 [string-mod-setting]
 rocket_target-goal_type-rocket-silo-rocket=Rockets Launched
