@@ -2,6 +2,7 @@
 Version: 20.0.2
 Date: 2020-12-05
   Features:
+    - Add mod setting for starting value so player can populate maps with existing values.
   Changes:
   Bugfixes:
   Info:
